Fix: Miscellaneous updates to Foraging Ants to allow main class to run under refactored code