@@ -25,18 +25,20 @@
   </dependencies>
 
   <build>
-        <plugins>
-            <!-- compiles project source code using correct version and flags -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <encoding>iso-8859-1</encoding>
-                    <source>${project.build.java.version}</source>
-                    <target>${project.build.java.version}</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <encoding>iso-8859-1</encoding>
+          <source>${project.build.java.version}</source>
+          <target>${project.build.java.version}</target>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
